--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,3 +1,17 @@
+.container {
+  position: relative;
+}
+
+.content {
+  position: absolute;
+  top: calc(100% + 4px);
+  left: 0;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+  background-color: var(--layout-level0);
+}
+
 /* search result */
 .search_item {
   cursor: pointer;
@@ -27,6 +41,11 @@
 
 .search_item:hover,
 .search_item:hover span {
+  color: var(--content-contrast);
+}
+
+.search_item mark {
+  background-color: transparent;
   color: var(--content-contrast);
 }
 
