--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -3,8 +3,8 @@
 }
 
 .header {
-  font-size: var(--text-3xl);
-  margin-bottom: var(--space-3);
+  font-size: 1.602rem;
+  margin-bottom: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -37,13 +37,13 @@
 }
 
 /* .title > span {
-  font-size: var(--text-2xl);
+  font-size: 1.424rem;
 } */
 
 .temp {
   display: flex;
-  font-size: var(--text-3xl);
-  margin-top: var(--space-3);
+  font-size: 1.602rem;
+  margin-top: 1rem;
   font-weight: bold;
 }
 
@@ -55,7 +55,7 @@
 .description {
   font-size: large;
   color: var(--content-subtle);
-  margin-top: var(--space-3);
+  margin-top: 1rem;
   display: block;
   text-transform: capitalize;
 }
@@ -69,7 +69,7 @@
   gap: 12px;
   /* justify-content: space-around;
   background-color: var(--layout-level2);
-  padding: var(--space-3) var(--space-2);
+  padding: 1rem 0.5rem;
   border-radius: 12px;
   margin-top: var(--space-4); */
 }
@@ -80,18 +80,18 @@
 
   flex: 0 0 calc(50% - (12px / 2));
   background-color: var(--layout-level2);
-  padding: var(--space-3);
+  padding: 1rem;
   border-radius: 12px;
 }
 
 .weather_item > div {
   display: flex;
   align-items: center;
-  gap: var(--space-1);
+  gap: 0.25rem;
 
-  font-size: var(--text-sm);
+  font-size: 0.889rem;
   color: var(--content-subtle);
-  margin-bottom: var(--space-2);
+  margin-bottom: 0.5rem;
 }
 
 .weather_item > div > span:not(:first-child) {
@@ -99,7 +99,7 @@
 }
 
 .weather_item > span {
-  font-size: var(--text-3xl);
+  font-size: 1.602rem;
   font-weight: 400;
 }
 
@@ -110,8 +110,8 @@
 
   display: flex;
   align-items: center;
-  gap: var(--space-1);
-  padding: var(--space-2);
+  gap: 0.25rem;
+  padding: 0.5rem;
   background-color: var(--layout-level2);
   color: var(--content-contrast);
   border: 0;
