--- a/ui/button/Button.module.css
+++ b/ui/button/Button.module.css
@@ -1,7 +1,7 @@
 .button {
   cursor: pointer;
   background-color: var(--brand-primary);
-  padding: var(--space-2) var(--space-3);
+  padding: 0.5rem 1rem;
   border-radius: 8px;
   color: var(--layout-level0);
   border: 0;
