--- a/ui/search-input/Search.module.css
+++ b/ui/search-input/Search.module.css
@@ -10,7 +10,7 @@
 }
 
 .search input {
-  padding: var(--space-3) var(--space-3) var(--space-3) var(--space-5);
+  padding: 1rem 1rem 1rem var(--space-5);
   width: 100%;
   border-radius: 12px;
   border: 0;
@@ -20,7 +20,7 @@
 
 .search input::placeholder,
 .search span,
-.search input[type='button'] {
+.search input[type="button"] {
   text-transform: capitalize;
   color: var(--content-nonessential);
   text-align: left;
@@ -30,7 +30,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: var(--space-2);
+  left: 0.5rem;
 }
 
 @media (pointer: coarse) {
@@ -39,6 +39,6 @@
   }
 
   .search input {
-    padding-left: var(--space-3);
+    padding-left: 1rem;
   }
 }
