--- a/ui/spinner/Spinner.module.css
+++ b/ui/spinner/Spinner.module.css
@@ -14,11 +14,11 @@
   width: 82px;
   height: 18px;
   position: relative;
-  margin-bottom: var(--space-3);
+  margin-bottom: 1rem;
 }
 .loader::before,
 .loader::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   transform: translate(-50%, 10%);
